@@ -168,6 +168,7 @@ changes to languages because of Bugzilla reports.
 * Removed getLang() from IContextSource and subclasses. (deprecated since 1.19)
 * Removed WebRequest::escapeAppendQuery(). (deprecated since 1.20)
 * SearchEngineReplacePrefixesComplete hook was removed.
+* SearchGetNearMatchBefore hook was removed.
 
 ==== Renamed classes ====
 * CLDRPluralRuleConverter_Expression to CLDRPluralRuleConverterExpression
